test/spec_vectors/simd_load_zero/fail/module_4.wat
(module (memory 0) (func $v128.load64_zero-arg-empty (result v128) (v128.load64_zero)))